-bug#0001937: Technical support page uses check table which waits for table lock
-bug#0001939: Do not query for number or items per host if concurrent polling processes is set to one
-bug#0001954: Usage of PHP_SELF without basename in html.php (at least partly fixed)
-bug#0001956: Attempts to update existing tree item fail
-bug#0001967: Reflected XSS on Cacti 0.8.7g
-bug: Accept "Connection refused" on TCP ping tests
-bug: Add missing row selection javascript to graph preview
-bug: Script server throws "undefined variable" error when in debug mode
-bug: Removing graphs does not take advantage of bulk deletes
-bug: Fixed issue with multiple "U" results for a data input method with multiple output parameters
-bug: SNMP v3 use AuthNoPriv when privacy passphrase is empty
-bug: Fixed sql errors when using template and search filter on graph management
-bug: Delete Data Source multi fails to perform bulk deletes on Data Source items
-bug: Allow Timespan Selector to work with $_REQUEST as well as $_POST
-bug: While in the mrtg view of Cacti Graphs, or in viewing graph properties zoom fails
-bug: The filepath api call should trim the filename before checking for the files existance
-bug: Fix issues with IE9 while editing templates
-feature#0001519: Spine enhancement for parallel collection of data at device level
-feature#0001667: Get values of |host_*| variables in graph elements from data source
-feature#0001922: Reindex method "Index Count Changed" requires that OID_NUM_INDEXES is given for SNMP Data Queries
-feature#0001923: Implement counting for script (server) data queries just like OID_NUM_INDEXES
-feature#0001924: Allow for reindex method "Index Count Changed" to apply to script (server) queries as well
-feature#0001952: Ability to use input field of a script in graph title 
-feature: Make reindexing and repopulating the poller cache a lossless process
-feature: Change default font sizes

0.8.7g
-bug: RRDTool 1.4.x not recognized during installation